# feynpy

./: README.md  meta.yaml  pyproject.toml
feynpy/: __init__.py
