[project]
name = "feynpy"
version = "0.0.1"
authors = [
  { name="FeynPy", email="feynpy@email.cz" },
]
description = "Python package for QFT calculations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FeynPy/feynpy"
Issues = "https://github.com/FeynPy/feynpy/issues"